valueOf changes